<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PopularMovies</string>
    <string name="menu_popular_movies">Popular Movies</string>
    <string name="menu_top_rated_movies">Top Rated Movies</string>
    <string name="menu_fav_movies">Favourites</string>
    <string name="card_image_desc">Movie Posters</string>
    <string name="movie_title">movie_title</string>
    <string name="backdrop_image">BackDropImage</string>
    <string name="movietitle">MovieTitle</string>
    <string name="poster_image">PosterImage</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release Date</string>
    <string name="description">Description</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_message">You need to have Mobile Data or wifi to access this. Press ok to Exit</string>
    <string name="no_interent_okbutton">ok</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="no_trailer">No Trailer Available</string>
    <string name="refresh_con">Refresh</string>
    <string name="videos">videos</string>
    <string name="json_results">results</string>
    <string name="json_key">key</string>
    <string name="trailer_default_image">/0.jpg</string>
    <string name="reviews">reviews</string>
    <string name="read_more">ReadMore</string>
    <string name="read_less">ReadLess</string>
    <string name="review_name">Name</string>
    <string name="review_author">Author</string>
    <string name="review_readmore">ReadMore</string>
    <string name="review_title">Reviews</string>
    <string name="trailer_title">Trailers</string>
    <string name="no_reviews">No Reviews Available</string>
    <string name="failed">Failed Try Again!</string>
    <string name="rating_text">Rating : </string>
    <string name="release_text">Release Date : </string>
    <string name="heart_text">heart</string>
    <string name="trailer_play">play</string>

</resources>