<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rellay_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/review_margin_down">

    <TextView
        android:id="@+id/review_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/review_name"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/review_twenty_two" />

    <at.blogc.android.views.ExpandableTextView
        android:id="@+id/review_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/review_name"
        android:text="@string/review_author"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="@dimen/review_author_text"
        android:maxLines="3"
        android:ellipsize="end"
        app:animation_duration="750"/>

    <TextView
        android:id="@+id/review_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/youtube_color"
        android:layout_below="@id/review_content"
        android:textSize="@dimen/review_author_text"
        android:text="@string/review_readmore" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/review_more"
        android:layout_marginEnd="@dimen/margin_ten_dp"
        android:layout_marginStart="@dimen/margin_ten_dp"
        android:layout_marginTop="@dimen/margin_five_dp"
        android:background="@color/line_seperator" />

</RelativeLayout>